--- a/style.css
+++ b/style.css
@@ -1,4 +1,78 @@
 body {
-    background-color:black
-
-}
+    background-image: url("Coffee.jpg");
+    background-repeat: space;
+    background-size: 140px;
+    
+  }
+  
+  #background {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+    padding-bottom: 50px;
+  }
+  
+  h1 {
+    margin: auto;
+    color: black;
+    height: 200px;
+    text-align: center;
+    line-height: 350px;
+    font-size: 40px;
+    font-family:Arial, Helvetica, sans-serif 
+  }
+  
+  h2 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  h3 {
+    text-align: center;
+  }
+  
+  section {
+    border: 1px solid black;
+    background-color: white;
+    
+  }
+  
+  #about {
+    width: 70%;
+    height: 300px;
+    border-radius: 50px;
+    margin-left: 200px;
+    margin-top: 30px;
+    display: inline-block;
+    
+  }
+  
+   #about-content {
+    margin: auto;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  img {
+    width: 30%
+  }
+ 
+  #contact {
+    text-align: center;
+ }
+  
+  #time {
+    text-align: center;
+  }
+  
+  #salesLink {
+    width: 80%;
+    margin: auto;
+    margin-top:50px;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: white;
+    padding: 10px;
+  }
