--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("Coffee.jpg");
+    background-image: url();
     background-repeat: space;
     background-size: 140px;
    
