--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,15 @@ body {
     background-color: white;
     padding: 10px;
   }
+
+  #salesLink2 {
+    width: 80%;
+    margin: auto;
+    margin-top: 50px;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: white;
+    padding: 10px;
+}
+  
