--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
     text-align: center;
     line-height: 350px;
     font-size: 40px;
-    font-family:Arial, Helvetica, sans-serif 
+    font-family: Arial, Helvetica, sans-serif; 
   }
   
   h2 {
