--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(/cookie-stand/image/Coffee.jpg);
+    background-image: url("/image/Coffee.jpg");
     background-repeat: space;
     background-size: 140px;
    
