--- a/css/3style.css
+++ b/css/3style.css
@@ -1,4 +1,9 @@
 table, tr, th, td {
     border: 1px solid;
     text-align: center;
+    
+}
+.center {
+    margin-left: auto;
+    margin-right: auto;
 }
