--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   background-repeat: space;
-  background-size: 140px;
+  background-size: 150px;
 }
 
 #background {
@@ -18,9 +18,9 @@ body {
 h1 {
   margin: auto;
   color: black;
-  height: 200px;
+  height: 180px;
   text-align: center;
-  line-height: 350px;
+  line-height: 365px;
   font-size: 40px;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -68,6 +68,25 @@ img {
 
 #productLink {
   text-align: center;
+  justify-content: space-between;
+}
+
+#americano {
+  width: 10%;
+  height: 10%;
+}
+
+#expresso {
+  width: 10%;
+  height: 10%;
+}
+#chocolate-chip {
+  width: 10%;
+  height: 10%;
+}
+#salmon-cookie {
+  width: 10%;
+  height: 10%;
 }
 
 #salesLink {
