--- a/css/style.css
+++ b/css/style.css
@@ -4,25 +4,24 @@ body {
   margin-left: auto;
   margin-right: auto;
   background-repeat: space;
-  background-size: 150px;
+  background-size: 160px;
 }
 
 #background {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 60px;
+  margin-top: 50px;
   padding-bottom: 50px;
 }
 
 h1 {
   margin: auto;
-  color: black;
-  height: 180px;
+  color: burlywood;
+  text-shadow: black;
+  height: 50px;
   text-align: center;
-  line-height: 375px;
   font-size: 50px;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
 
 h2 {
@@ -91,17 +90,6 @@ img {
 }
 
 #salesLink {
-  width: 80%;
-  margin: auto;
-  margin-top: 50px;
-  text-align: center;
-  border: 1px solid black;
-  border-radius: 10px;
-  background-color: white;
-  padding: 10px;
-}
-
-#salesLink2 {
   width: 80%;
   margin: auto;
   margin-top: 50px;
