--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
   margin-right: auto;
   background-repeat: space;
   background-size: 160px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 #background {
